@@ -102,6 +102,7 @@ Please note that our support for the checkout block is still experimental and th
 == Changelog ==
 
 = 1.9.0 - 2021-xx-xx =
+* Add - Improved fraud prevention.
 * Add - New setting to manage whether to enable saving cards during checkout. (Defaults to being enabled).
 * Fix - Fixed issue where an empty alert would appear when trying to refund an authorization charge.
 * Update - Link customer name on transaction detail page to filtered transaction list page.
